discussion/kv_engine/155181/155181_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move from void to CookieIface for cookie pointers

This patch was created using the following steps:
1. find . -name ‘*.h’ -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
2. find . -name '*.cc' -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
3. Add for dec of CookieIface when needed
4. Add static_cast<const void*>() to any Cookie* being passed to
 spdlogger.
5. Roll back any invalid modifications from void* to CookieIface (e.g
in TopKeys or KVStore interfaces).
6. Revert any changes to engine_common.h to keep the AddStatFn and
AddResponseFn callback definitions the same. As we pass multiple data
types over the cookie arg.
7. Fix clang-tidy warnings related to the changes in the patch

Change-Id: I26c4c8b2a0c040c43d5afad4aaccd4f4aa749387

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-07 12:02:08.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-07 12:51:01.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9554/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/cbstat_collector.h:17:10: error: "spdlog/fmt/fmt.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/fmt.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:29:10: error: "spdlog/spdlog.h" file not found [clang-diagnostic-error]
#include <spdlog/spdlog.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9554/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9554/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36507/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/101/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31195/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11547/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11276/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19132/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10199/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8152/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 12:55:55.000000000
Message: 
Patch Set 3: Verified+1

Overriding -1 from clang_tidy due to the errors being not related to this patch. And are latent include issues
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 12:55:59.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-07 13:35:45.000000000
Message: 
Patch Set 3: Code-Review-1

(6 comments)
Line:17, /COMMIT_MSG -> Note for future reference - you could probably get a smaller set of matches by actually adding "cookie" argument name to the sed search expression.

Line:19, /COMMIT_MSG -> Similary here - you could exclude engine_common.h from the find search pattern.

Line:752, daemon/connection.cc -> This static_cast isn't necessary - `cookies` is a container of Cookie; which is-a CookieIface.

Line:422, daemon/mcaudit.cc -> ditto

Line:149, engines/ep/benchmarks/vbucket_bench.cc -> This is probably a bad idea given *this doesn't inherit from CookieIface.

Looking at the code of deleteVBucket, `c` is only used if non-null; so safer to just pass null here.

Line:56, tests/topkeys/topkeys_test.cc -> This looks wrong - the first argument to stats() is a C-style context for the provided user callback function (dump_key here). As such, `count` should be passed as a void*.

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:17, /COMMIT_MSG -> Ack
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:19, /COMMIT_MSG -> Ack
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:752, daemon/connection.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:422, daemon/mcaudit.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:149, engines/ep/benchmarks/vbucket_bench.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-07 14:13:21.000000000
MISMATCHED INLINE COMMENT
Line:56, tests/topkeys/topkeys_test.cc -> Done
----------------------------------------------------------------------------------------------------------------------
